# frigate-media-backup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml
docker/: Dockerfile  docker-compose.yaml
examples/: config.local.template.yaml  config.yaml
src/frigate_media_backup/: __init__.py  artifact.py  cli.py  config.py  events.py  frigate.py  mqtt_runner.py  service.py  state.py
src/frigate_media_backup/destinations/: __init__.py  base.py  factory.py  filesystem.py  s3.py  sftp.py
tests/: test_config.py  test_destinations.py  test_events.py  test_frigate.py  test_import.py  test_mqtt_runner.py  test_service.py  test_state.py
